--- a/app/src/main/res/layout/allmachine_line_item.xml
+++ b/app/src/main/res/layout/allmachine_line_item.xml
@@ -1,77 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:weightSum="9">
-
-    <TextView
-        android:id="@+id/tv_00"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:textSize="@dimen/middle_text_size" />
-
-    <TextView
-        android:id="@+id/tv_01"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@color/rawmaterial_dark"
-        android:gravity="center"
-        android:textSize="@dimen/middle_text_size" />
-
-    <TextView
-        android:id="@+id/tv_02"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:textSize="@dimen/middle_text_size" />
-
-    <TextView
-        android:id="@+id/tv_03"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="3"
-        android:background="@color/rawmaterial_dark"
-        android:gravity="center"
-        android:textSize="@dimen/middle_text_size" />
-
-
-    <TextView
-        android:id="@+id/tv_06"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:textSize="@dimen/middle_text_size" />
-
-    <TextView
-        android:id="@+id/tv_07"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@color/rawmaterial_dark"
-        android:gravity="center"
-        android:textSize="@dimen/middle_text_size" />
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/ll_08"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="9">
 
         <TextView
-            android:id="@+id/tv_08"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_00"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center"
-            android:text="ssss"
             android:textSize="@dimen/middle_text_size" />
+
+        <TextView
+            android:id="@+id/tv_01"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/rawmaterial_dark"
+            android:gravity="center"
+            android:textSize="@dimen/middle_text_size" />
+
+        <TextView
+            android:id="@+id/tv_02"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="@dimen/middle_text_size" />
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:background="@android:color/white"
+            android:orientation="horizontal">
+
+            <View
+                android:id="@+id/orderpercentview"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
+
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/iv_show_fresco"
+                android:layout_width="@dimen/logo_width"
+                android:layout_height="@dimen/logo_width"
+                android:layout_gravity="center_vertical"
+                android:visibility="invisible"
+                fresco:failureImage="@color/default_img"
+                fresco:placeholderImage="@color/main_unclick" />
+
+            <com.android.tedcoder.material.view.MarqueeTextView
+                android:id="@+id/tv_03"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/logo_margin_width"
+                android:ellipsize="marquee"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="left|center_vertical"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                android:text="logo : PO : CustPN : OrderPercent"
+                android:textSize="@dimen/middle_text_size"
+                android:textStyle="bold" />
+
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/tv_06"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="@dimen/middle_text_size" />
+
+        <TextView
+            android:id="@+id/tv_07"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/rawmaterial_dark"
+            android:gravity="center"
+            android:textSize="@dimen/middle_text_size" />
+
+        <LinearLayout
+            android:id="@+id/ll_08"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_08"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:textSize="@dimen/middle_text_size" />
+        </LinearLayout>
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/line_color" />
+</RelativeLayout>
 
 
-</LinearLayout>
