--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -14,6 +14,10 @@
 
     <dimen name="cicle_width">30dp</dimen>
 
+
+    <dimen name="logo_width">30dp</dimen>
+    <dimen name="logo_margin_width">34dp</dimen>
+
     <!--字体大小-->
     <dimen name="title_text_size">22sp</dimen>
     <dimen name="big_text_size">22sp</dimen>
