--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,8 +10,14 @@
     <color name="rawmaterial_light">#ffffffff</color>
     <color name="main_white">#ffffffff</color>
     <color name="main_click">#ffeeeeee</color>
+
+    <color name="default_img">#ffe4e4e4</color>
+
     <!-- 用于点击色 -->
     <color name="common_text">#ff4F4F4F</color>
+    <color name="line_color">#ff3c3c3c</color>
+
+
     <color name="holo_red_light">#ffff4444</color>
     <color name="holo_green_dark">#ff669900</color>
     <color name="holo_orange_dark">#ffff8800</color>
